@@ -1,3 +1,13 @@
+2018-10-03  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [WPE][GTK] Enable MSE by default
+        https://bugs.webkit.org/show_bug.cgi?id=190243
+
+        Reviewed by Xabier Rodriguez-Calvar.
+
+        * UIProcess/API/glib/WebKitSettings.cpp:
+        (webkit_settings_class_init):
+
 2018-10-02  Alex Christensen  <achristensen@webkit.org>
 
         Deprecate WKConnection
